--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,18 @@
+@import url("https://fonts.cdnfonts.com/css/chilet");
+@import url('https://fonts.cdnfonts.com/css/octarine');
 @import "tailwindcss";
 @plugin "daisyui" {
   themes: all;
 }
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Chilet", sans-serif;
+  font-family: "Octarine", sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
